[package]
name = "push2_display"
version = "0.2.0"
authors = ["Marc Bracher"]
edition = "2018"
description="Ableton Push2 Embedded-graphics display driver"
license="MIT OR Apache-2.0"
readme = "./README.md"
keywords = ["embedded-graphics", "graphics", "embedded", "push2"]
repository = "https://github.com/mbracher/push2_display"

[dependencies]
embedded-graphics-core = "0.3.3"
rusb = "0.9.1"
thiserror = "1.0.30"


[[example]]
name = "hello"

[dev_dependencies]
embedded-graphics = "0.7.1"

